Fix faq-toc alignment on scrollfix

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -60,15 +60,6 @@ html
   .app-footer
     margin-top gd(4)
 
-.faq-table-of-contents
-  width 40%
-  min-width 380px
-  .nav
-    margin-top gd(2)
-    margin-right gd(2)
-  .ui-scrollfix
-    top 0px
-    left gd(2)
 
 .ui-scrollfix.scrollfix-fixed
   position fixed
@@ -154,9 +145,8 @@ html
 
 
 .register-table-of-contents
-.faq-table-of-contents
 .involvement-type
-  background-color hsl(207, 44%, 92%)
+  background-color pane-blue
 
 .app-navbar
   padding-top 20px
